REFACTORED: ArgsTest  && BooleanOptionParserTest && SingleValuedOptionParserTest